--- a/templates/add_employee.html
+++ b/templates/add_employee.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" type="text/css" href="css/remove_employee.css" />
 </head>
 <body>
-    
+    <h1>sdfghfd</h1>
 </body>
 </html>
