--- a/templates/add_employee.html
+++ b/templates/add_employee.html
@@ -13,7 +13,7 @@
     <section> 
         <div>
             <h3> Employee Details </h3>
-            <form action="/add_employee" method="POST" >
+            <form action="/employees" method="POST" >
                 <label> ID: </label>
                 <input type="text" id="employee_id" name="employee_id"><br><br>
                  
