--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,12 @@
     <title>AQJ Homepage</title>
     <link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
-<body>
+<body>  
     <h1 id = "title" > Homepage </h1>
+    <h1 id = "menu"> menu </h1>
+    <a href = "/employees"> Add Employee </a>
+    <a href = "/projects"> show projects</a>
+    <a href = "/employees/set"> set employee to project</a>
+</div>
 </body>
 </html>
