--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,16 @@
 <body>  
     <h1 id = "title" > Homepage </h1>
     <h1 id = "menu"> menu </h1>
-    <a href = "/employees"> Add Employee </a>
-    <a href = "/projects"> show projects</a>
-    <a href = "/employees/set"> set employee to project</a>
+    <article>
+        <a href = "/employees"> Add Employee </a>
+    </article>
+    <article>
+        <a href = "/projects"> show projects</a>
+    </article>
+    <article>
+        <a href = "/employees/set"> set employee to project</a>
+    </article>
+    
 </div>
 </body>
 </html>
