front dynamic-table (python) test

--- a/templates/my_employees.html
+++ b/templates/my_employees.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" type="text/css" href="css/my_employees.css" />
 </head>
 <body>
+    <header>
 
+    </header>
+    <nav>
+        <a href="/">Home</a> |
+    </nav>
 </body>
 </html>
