--- a/templates/my_employees.html
+++ b/templates/my_employees.html
@@ -27,7 +27,7 @@
                     {%for attribute in employee.values()%}
                         <td>{{attribute}}</td>
                     {%endfor%}
-                    <td> <a href="/remove_employee/"> Remove </a> </td>
+                    <td> <a href="/remove_employee/{{ employee['id'] }}"  > Remove </a> </td>
                 </tr>
             {%endfor%}
         </table>
