--- a/templates/scheduling.html
+++ b/templates/scheduling.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" type="text/css" href="css/scheduling.css" />
 </head>
 <body>
-    <h1> Scheduling </h1>
+    <header>
+        <h1> Scheduling </h1>
+    </header>
+    <nav>
+        
+    </nav>
 </body>
 </html>
