Add time_line files

--- a/templates/time_line.html
+++ b/templates/time_line.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scheduling</title>
-    <link rel="stylesheet" type="text/css" href="css/scheduling.css" />
+    <link rel="stylesheet" type="text/css" href="css/time_line.css" />
 </head>
 <body>
     <header>
-        <h1> Scheduling </h1>
+        <h1> Time-Line </h1>
     </header>
     <nav>
         <a href="/">Home</a>
     </nav>
     <section>
-        
+        <h3> Project Time-Line </h3>
         
     </section>
     <footer>
