--- a/templates/my_employees.html
+++ b/templates/my_employees.html
@@ -26,6 +26,7 @@
                     {%for attribute in employee%}
                         <td>{{attribute}}</td>
                     {%endfor%}
+                    <button type="button"> Add employee to project</button>
                 </tr>
             {%endfor%}
         </table>
