--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -6,8 +6,12 @@
     <title>Scheduling</title>
     <link rel="stylesheet" type="text/css" href="css/scheduling.css" />
 </head>
+
 <body>
-    <h1> Scheduling </h1>
+
+    {% block my_employees %}  {%endblock}
+    {{project}}
+
     
 </body>
 </html>
