footer & employees files css

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,6 @@
     <article>
         <a href = "/employees/set"> set employee to project</a>
     </article>
-    
-</div>
+    {% include 'footer.html' %}
 </body>
 </html>
