--- a/templates/my_projects.html
+++ b/templates/my_projects.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" type="text/css" href="css/my_projects.css" />
 </head>
 <body>
-    
+    {% include 'footer.html' %}
 </body>
 </html>
