--- a/templates/remove_employee.html
+++ b/templates/remove_employee.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" type="text/css" href="css/remove_employee.css" />
 </head>
 <body>
-    
+    {% include 'footer.html' %}
 </body>
 </html>
