--- a/templates/scheduling.html
+++ b/templates/scheduling.html
@@ -17,8 +17,6 @@
         
         
     </section>
-    <footer>
-        <h4> Contractors Union </h4>
-    </footer>
+    {% include 'footer.html' %}
 </body>
 </html>
