--- a/templates/time_line.html
+++ b/templates/time_line.html
@@ -17,8 +17,6 @@
         <h3> Project Time-Line </h3>
         
     </section>
-    <footer>
-        <h4> Contractors Union </h4>
-    </footer>
+    {% include 'footer.html' %}
 </body>
 </html>
