--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,5 +3,8 @@
 <link rel="stylesheet" type="text/css" href="css/footer.css" />
 
 <div id="footer">
-    <h4> Contractors Union !!!</h4>
+    <div id="left" > <h5> Mohammad Abid </h5> </div>
+    <div id="center"> <h5> Mohammad Jayousi </h5> </div>
+    <div id="right"> <h5> Mahmod Qwasmi </h5> </div>
+    <!-- <h4> Contractors Union !!!</h4> -->
 </div>
