--- a/templates/index.html
+++ b/templates/index.html
@@ -6,18 +6,20 @@
     <title>AQJ Homepage</title>
     <link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
-<body>  
-    <h1 id = "title" > Homepage </h1>
-    <h1 id = "menu"> menu </h1>
-    <article>
-        <a href = "/employees"> Add Employee </a>
-    </article>
-    <article>
-        <a href = "/projects"> show projects</a>
-    </article>
-    <article>
-        <a href = "/employees/set"> set employee to project</a>
-    </article>
+<body> 
+    {% include 'header.html' %} 
+    <section id="main_section">
+        <article>
+            <a href = "/employees"> Add Employee </a>
+        </article>
+        <article>
+            <a href = "/projects"> show projects</a>
+        </article>
+        <article>
+            <a href = "/employees/set"> set employee to project</a>
+        </article>
+    </section>
+    
     {% include 'footer.html' %}
 </body>
 </html>
