--- a/templates/my_employees.html
+++ b/templates/my_employees.html
@@ -8,13 +8,11 @@
     <link rel="stylesheet" type="text/css" href="css/table_style.css" />
 </head>
 <body>
-    <header>
-
-    </header>
+    {% include 'header.html' %}
     <nav>
         <a href="/">Home</a>
     </nav>
-    <section>
+    <section id="main_section">
         <table class="content-table">
             <thead>
                 <tr>
