--- a/templates/my_projects.html
+++ b/templates/my_projects.html
@@ -7,27 +7,31 @@
     <link rel="stylesheet" type="text/css" href="css/my_projects.css" />
     <link rel="stylesheet" type="text/css" href="css/table_style.css" />
 </head>
-<body>    
-    <table class="content-table"> 
-        <thead>
-            <tr>
-                <th>Project</th>
-                <th>Employees</th>
-                <th>progress</th>
-            </tr>
-        </thead>
-        <tbody>
-            {%for project in projects%}
-            <tr>
-                <td>{{employees.get(project.get('id'))}}</td>
-                {%for cell in project%}
-                    <td>{{project.get(cell)}}</td>
-                {%endfor%} 
-                <td> <a href="/schedule/{{ project.get('id') }}"> Add employee to project </a> </td>
-            </tr>
-            {%endfor%}
-        </tbody>
-    </table>
+<body> 
+    {% include 'header.html' %}   
+    <section id="main_section">
+        <table class="content-table"> 
+            <thead>
+                <tr>
+                    <th>Project</th>
+                    <th>Employees</th>
+                    <th>progress</th>
+                </tr>
+            </thead>
+            <tbody>
+                {%for project in projects%}
+                <tr>
+                    <td>{{employees.get(project.get('id'))}}</td>
+                    {%for cell in project%}
+                        <td>{{project.get(cell)}}</td>
+                    {%endfor%} 
+                    <td> <a href="/schedule/{{ project.get('id') }}"> Add employee to project </a> </td>
+                </tr>
+                {%endfor%}
+            </tbody>
+        </table>
+    </section>
+    
     {% include 'footer.html' %}
 </body>
 </html>
