--- a/templates/remove_employee.html
+++ b/templates/remove_employee.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/remove_employee.css" />
 </head>
 <body>
+    {% include 'header.html' %}
     {% include 'footer.html' %}
 </body>
 </html>
