add employee works

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,10 @@
     <h1 id = "title" > Homepage </h1>
     <h1 id = "menu"> menu </h1>
     <article>
-        <a href = "/employees"> Add Employee </a>
+        <a href = "/employees/add"> Add Employee </a>
+    </article>
+    <article>
+        <a href = "/employees"> Show Employees </a>
     </article>
     <article>
         <a href = "/projects"> show projects</a>
