add href to the header menu

--- a/templates/header.html
+++ b/templates/header.html
@@ -4,9 +4,9 @@
 
 <header id="custom_header">
     <ul class="menu">
-        <li> <a href="#!"> Home </a> </li>
-        <li> <a href="#!"> My Projects </a> </li>
-        <li> <a href="#!"> My Employees </a> </li>
+        <li> <a href="/"> Home </a> </li>
+        <li> <a href="/projects"> My Projects </a> </li>
+        <li> <a href="/employees"> My Employees </a> </li>
         <li> <a href="#!"> Time Line </a> </li>
         <li> <a href="#!"> Logout </a> </li>
     </ul>
