add project works

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,9 @@
     {% include 'header.html' %} 
     <section id="main_section">
     <article>
+        <a href = "/projects/add"> Add Project </a>
+    </article>
+    <article>
         <a href = "/employees/add"> Add Employee </a>
     </article>
     <article>
