fix bugs and add progress bar

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 
 
-<link rel="stylesheet" type="text/css" href="css/footer.css" />
+<link rel="stylesheet" type="text/css" href="/css/footer.css" />
 
 <div id="footer">
     <div id="left" > <h5> Mohammad Abid </h5> </div>
