--- a/templates/header.html
+++ b/templates/header.html
@@ -1,13 +1,13 @@
 
 
-<link rel="stylesheet" type="text/css" href="css/header.css" />
+<link rel="stylesheet" type="text/css" href="/css/header.css" />
 
 <header id="custom_header">
     <ul class="menu">
-        <li> <a href="#!"> Home </a> </li>
-        <li> <a href="#!"> My Projects </a> </li>
-        <li> <a href="#!"> My Employees </a> </li>
-        <li> <a href="#!"> Time Line </a> </li>
+        <li> <a href="/"> Home </a> </li>
+        <li> <a href="/projects"> My Projects </a> </li>
+        <li> <a href="/employees"> My Employees </a> </li>
+        <li> <a href="/time_line"> Time Line </a> </li>
         <li> <a href="#!"> Logout </a> </li>
     </ul>
 </header>
