--- a/templates/time_lines.html
+++ b/templates/time_lines.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time Lines</title>
     <link rel="stylesheet" type="text/css" href="css/time_line.css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
     {% include 'header.html' %}
@@ -16,14 +17,17 @@
             <tr>
                 <th> id </th>
                 <th> name </th>
-                <th> start_date </th>
-                <th> end_date </th>
+                <th> progress </th>
             </tr>
             {%for time_line in time_lines%}
                 <tr>
-                    {%for attribute in time_line.values()%}
-                        <td>{{attribute}}</td>
-                    {%endfor%}
+                        <td>{{time_line.get('id')}}</td>
+                        <td>{{time_line.get('name')}}</td>
+                        <td>
+                        <div class="w3-light-grey w3-round-xlarge">
+                        <div class="w3-container w3-blue w3-round-xlarge" style="width:{{time_line.get('progress')}}%">{{time_line.get('progress')}}%</div>
+                        </div>
+                        </td>
                     
                 </tr>
             {%endfor%}
