--- a/templates/time_lines.html
+++ b/templates/time_lines.html
@@ -12,7 +12,7 @@
     <nav>
         <a href="/">Home</a>
     </nav>
-    <section>
+    <section id="main_section">
         <table>
             <tr>
                 <th> id </th>
