--- a/static/css/table_style.css
+++ b/static/css/table_style.css
@@ -2,12 +2,16 @@
 
 .content-table{
     border-collapse: collapse;
-    margin: 25px 0;
+    /* margin: 25px 0; */
     font-size: 0.9em;
     min-width: 400px;
     border-radius: 5px 5px 0 0;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    text-align: center;
+
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .content-table thead tr{
@@ -15,6 +19,7 @@
     color: #ffffff;
     text-align: left;
     font-weight: bold;
+    text-align: center;
 }
 
 .content-table th, .content-table td{
