--- a/templates/new_project.html
+++ b/templates/new_project.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Add New Project Details </title>
-    <link rel="stylesheet" type="text/css" href="/css/my_projects.css" />
-    <link rel="stylesheet" type="text/css" href="/css/table_style.css" />
+    <link rel="stylesheet" type="text/css" href="css/my_projects.css" />
+    <link rel="stylesheet" type="text/css" href="css/table_style.css" />
 </head>
 <body> 
     {% include 'header.html' %}
