add employee/project button

--- a/templates/my_employees.html
+++ b/templates/my_employees.html
@@ -35,6 +35,9 @@
                 {%endfor%}
             </tbody>
         </table>
+        <form action="/employees/add" class="inline">
+            <button class="float-left submit-button" >Add new employee</button>
+        </form>
     </section>
     {% include 'footer.html' %}
 </body>
