--- a/templates/my_projects.html
+++ b/templates/my_projects.html
@@ -30,6 +30,9 @@
                 {%endfor%}
             </tbody>
         </table>
+        <form action="/projects/add" class="inline">
+            <button class="float-left submit-button" >Add new Project</button>
+        </form>
     </section>
     
     {% include 'footer.html' %}
