Add Red/Green Circle in employee table

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,6 +1,10 @@
 
 @import url("https://fonts.googleapis.com/css?family=Varela+Round");
 
+body{
+    flex-direction: column;
+}
+
 #custom_header{
     left: 0;
     top: 0;
