fix bugs, style buttons and tables, and redisgn table

--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scheduling</title>
     <link rel="stylesheet" type="text/css" href="/css/scheduling.css" />
+    <link rel="stylesheet" type="text/css" href="/css/table_style.css" />
+
 </head>
 
 <body>
     {% include 'header.html' %}
     <section id="main_section">
-        <table>
+        <table class="content-table">
             <tr>
                 <th> id </th>
                 <th> name </th>
