--- a/static/css/employees_dialog.css
+++ b/static/css/employees_dialog.css
@@ -12,7 +12,7 @@
 .popup .popuptext {
   visibility: hidden;
   width: 160px;
-  background-color: #555;
+  background-color: #34495E;
   color: #fff;
   text-align: center;
   border-radius: 6px;
@@ -52,4 +52,29 @@
 @keyframes fadeIn {
   from {opacity: 0;}
   to {opacity:1 ;}
+}
+
+.popup {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.popup {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #2471A3;
+}
+
+.popup:hover {
+  background-color: #2471A3;
+  color: white;
 }
