form css add new project

--- a/templates/header.html
+++ b/templates/header.html
@@ -8,6 +8,6 @@
         <li> <a href="/projects"> My Projects </a> </li>
         <li> <a href="/employees"> My Employees </a> </li>
         <li> <a href="/time_line"> Time Line </a> </li>
-        <li> <a href="#!"> Logout </a> </li>
+        <!-- <li> <a href="#!"> Logout </a> </li> -->
     </ul>
 </header>
