--- a/templates/time_lines.html
+++ b/templates/time_lines.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time Lines</title>
-    <link rel="stylesheet" type="text/css" href="css/time_line.css" />
+    <link rel="stylesheet" type="text/css" href="/css/time_line.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" type="text/css" href="css/table_style.css" />
+
 </head>
 <body>
     {% include 'header.html' %}
